Version 2.43
---------
 * Small code cleanups

Version 2.42
---------
 * virtnbdrestore: add --compress option: if enabled, NBD server used for
 restore will make use of the qcow compression driver.  This way, restored
 data within the qcow image is compressed according to the image compression
 type setting.

 This will be beneficial for images that contained many compressed blocks, as
 the restored images will be way smaller. (#295)

Version 2.41
---------
 * Disable building rust bindings when creating venv (#293)
 * Small code cleanups
 * Use tqdm logging_redirect_tqdm to not break progress bars (#294) ￼

Version 2.40
---------
 * Add OpenSUSE 16 to build scripts
 * Use trixie for docker container
 * venv/create.sh fails to successfully build libnbd without python setuptools
 (#290)
 * Add support for VIR_DOMAIN_BACKUP_BEGIN_PRESERVE_SHUTDOWN_DOMAIN: As with
 libvirt version 11.10, this flag prevents VM shutdown while an backup job is
 still active. The VM is in that scenario reset and paused instead of
 terminated allowing the backup to finish. Once the backup finishes the VM
 process is terminated. See:

  https://libvirt.org/kbase/live_full_disk_backup.html#shutdown-of-the-guest-os-during-backup

Version 2.39
---------
 * Add fedora 42 to build scripts.
 * Gracefully handle network attached disk devices, show error message and
 hint (#286)

Version 2.38
---------
 [Francisco Javier]
 * virtnbdbackup: reuse existing sftp connections during backup. (#283)

 [Michael Ablassmeier]
 * virtnbdmap: replaying changes may fail with "[Errno 22] Invalid argument":
 the NBD device sometimes needs some time to settle, wait until it is seekable
 to the end of the block list instead of failing.
 * virtnbdbackup: During full backup, all old checkpoints are removed.
 Sometimes there might be situations where bitmaps are not existent anymore.
 Now, during full backup, checkpoint consistency is validated prior to